--- a/css.css
+++ b/css.css
@@ -13,6 +13,19 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Тень контейнера */
 }
 
+
+.image-container {
+    text-align: center; /* Центрирование по горизонтали */
+}
+
+.image-container img {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto; /* Центрирование по горизонтали */
+    max-width: 200px; /* Пример: максимальная ширина изображения */
+}
+
 h1, h2, h3 {
     color: #000000;
 }
